--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gank.io",
+  "name": "gank.io-vue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "register-service-worker": "^1.7.1",
     "vant": "^2.8.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-pwa": "~4.4.0",
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-plugin-vuex": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
